--- a/6강_실습(원본).ipynb
+++ b/6강_실습(원본).ipynb
@@ -37,39 +37,112 @@
     {
       "cell_type": "code",
       "source": [
-        "3>6"
+        "light_on = 3>6\n",
+        "print(light_on)"
       ],
       "metadata": {
-        "id": "XOU0zbs0NrLP"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XOU0zbs0NrLP",
+        "outputId": "8255c64f-b936-4821-b4be-eb8f378a6fab"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "suf = 10\n",
+        "vol = 20\n",
+        "isStop = suf == vol\n",
+        "print(isStop)"
+      ],
       "metadata": {
-        "id": "ZW1w8qQHoAm3"
+        "id": "KgNlODOIOMPF",
+        "outputId": "4825d247-81d7-43d1-d310-1619ada25e02",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {
+        "id": "ZW1w8qQHoAm3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9a956a1d-7834-4af5-95bf-231c3026ef61"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "반지름을 입력하세요:-20\n",
+            "높이를 입력하세요:30\n"
+          ]
+        }
+      ],
       "source": [
         "#반지름 사용자 입력\n",
         "rad = int(input(\"반지름을 입력하세요:\"))\n",
         "#높이 사용자 입력\n",
         "hei = int(input(\"높이를 입력하세요:\"))\n",
-        "#부피&겉넓이 계산\n",
-        "vol = 1/3 * 3.14 * rad ** 2 * hei\n",
-        "suf = 3.14 * rad ** 2 + 3.14 * rad * hei\n",
-        "print(\"원뿔의 부피는\" ,vol, \"입니다.\")\n",
-        "print(\"원뿔의 겉넓이는\" ,suf, \"입니다\")"
+        "\n",
+        "if rad > 0 :\n",
+        "  #부피&겉넓이 계산\n",
+        "  vol = 1/3 * 3.14 * rad ** 2 * hei\n",
+        "  suf = 3.14 * rad ** 2 + 3.14 * rad * hei\n",
+        "  print(\"원뿔의 부피는\" ,vol, \"입니다.\")\n",
+        "  print(\"원뿔의 겉넓이는\" ,suf, \"입니다\")"
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [],
+      "cell_type": "code",
+      "source": [
+        "temp = 20\n",
+        "fruit = \"apple\"\n",
+        "\n",
+        "print(not temp <= 27)\n"
+      ],
       "metadata": {
-        "id": "gIxdfGagpB53"
-      }
+        "id": "dvxlI8xFQd25",
+        "outputId": "01737b64-c2f6-4a66-9788-cb7ee735b650",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
