Colab을 통해 생성됨

--- a/6강_실습(원본).ipynb
+++ b/6강_실습(원본).ipynb
@@ -47,7 +47,7 @@
         "id": "XOU0zbs0NrLP",
         "outputId": "8255c64f-b936-4821-b4be-eb8f378a6fab"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -73,7 +73,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,21 +86,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 2,
       "metadata": {
         "id": "ZW1w8qQHoAm3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9a956a1d-7834-4af5-95bf-231c3026ef61"
+        "outputId": "2cf3be80-5f5f-4866-fb4b-88a2adc04b8f"
       },
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "반지름을 입력하세요:-20\n",
-            "높이를 입력하세요:30\n"
+            "반지름을 입력하세요:20\n",
+            "높이를 입력하세요:-30\n"
           ]
         }
       ],
@@ -110,7 +110,7 @@
         "#높이 사용자 입력\n",
         "hei = int(input(\"높이를 입력하세요:\"))\n",
         "\n",
-        "if rad > 0 :\n",
+        "if rad > 0 and hei > 0 :\n",
         "  #부피&겉넓이 계산\n",
         "  vol = 1/3 * 3.14 * rad ** 2 * hei\n",
         "  suf = 3.14 * rad ** 2 + 3.14 * rad * hei\n",
@@ -133,7 +133,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
