--- a/6강_실습(원본).ipynb
+++ b/6강_실습(원본).ipynb
@@ -86,21 +86,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 6,
       "metadata": {
         "id": "ZW1w8qQHoAm3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2cf3be80-5f5f-4866-fb4b-88a2adc04b8f"
+        "outputId": "9b72e721-c33a-4b65-bdb3-31d184c3bb35"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "반지름을 입력하세요:20\n",
-            "높이를 입력하세요:-30\n"
+            "높이를 입력하세요:-30\n",
+            "반지름과 높이의 값을 모두 양수로 입력해주세요\n"
           ]
         }
       ],
@@ -115,7 +116,9 @@
         "  vol = 1/3 * 3.14 * rad ** 2 * hei\n",
         "  suf = 3.14 * rad ** 2 + 3.14 * rad * hei\n",
         "  print(\"원뿔의 부피는\" ,vol, \"입니다.\")\n",
-        "  print(\"원뿔의 겉넓이는\" ,suf, \"입니다\")"
+        "  print(\"원뿔의 겉넓이는\" ,suf, \"입니다\")\n",
+        "else :\n",
+        "  print(\"반지름과 높이의 값을 모두 양수로 입력해주세요\")"
       ]
     },
     {
@@ -164,9 +167,50 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#A, B, C 사용자 입력\n",
+        "A= int(input(\"A입력: \"))\n",
+        "B= int(input(\"B입력: \"))\n",
+        "C= int(input(\"C입력: \"))\n",
+        "\n",
+        "#A, B, C 중 가장 큰 수 출력\n",
+        "if A>B :\n",
+        "  if A>C :\n",
+        "    print(A)\n",
+        "  else :\n",
+        "    print(C)\n",
+        "else:\n",
+        "  if B>C :\n",
+        "    print(B)\n",
+        "  else :\n",
+        "    print(C)"
+      ],
+      "metadata": {
+        "id": "SuPkvKRSoJBE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6231fc62-ffe1-4272-9cd8-1a23b11a5827"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A입력: 5\n",
+            "B입력: 5\n",
+            "C입력: 3\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "SuPkvKRSoJBE"
+        "id": "ubNwVhl9UDM6"
       },
       "execution_count": null,
       "outputs": []
