--- a/9강_실습(원본).ipynb
+++ b/9강_실습(원본).ipynb
@@ -45,20 +45,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "OhGWjvMSf_uP"
       },
       "outputs": [],
       "source": [
         "def prt_cone_vol(r,h) :\n",
-        "    if rad > 0 and hei > 0 :\n",
+        "    if r > 0 and h > 0 :\n",
         "        # r, h 모두 양수일 때\n",
-        "        vol = 1/3 * 3.14 * rad ** 2 * hei\n",
+        "        vol = 1/3 * 3.14 * r ** 2 * h\n",
         "        print(\"원뿔의 부피는\", vol, \"입니다.\")\n",
         "    else :\n",
         "    # r, h가 음수일 때\n",
-        "    print(\"반지름과 높이 값에 양수를 입력하세요\")\n"
+        "        print(\"반지름과 높이 값에 양수를 입력하세요\")\n"
       ]
     },
     {
@@ -72,12 +72,28 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "radius = 20\n",
+        "height = -30\n",
+        "prt_cone_vol(radius,height)"
+      ],
       "metadata": {
-        "id": "Kgl7g457gFnj"
+        "id": "Kgl7g457gFnj",
+        "outputId": "ecda9a81-7188-4197-aa77-124ec998b6ac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "반지름과 높이 값에 양수를 입력하세요\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -90,12 +106,32 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\n",
+        "num = 1234\n",
+        "\n",
+        "while num != 0 :\n",
+        "    digit = num % 10\n",
+        "    num = num // 10\n",
+        "    print(digit, end=\"\")\n"
+      ],
       "metadata": {
-        "id": "nsHHCmKB_pnQ"
+        "id": "nsHHCmKB_pnQ",
+        "outputId": "f7a593dd-9762-4a4d-a006-5c4608f80221",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4321"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
