Colab을 통해 생성됨

--- a/9강_실습(원본).ipynb
+++ b/9강_실습(원본).ipynb
@@ -79,10 +79,10 @@
       ],
       "metadata": {
         "id": "Kgl7g457gFnj",
-        "outputId": "ecda9a81-7188-4197-aa77-124ec998b6ac",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ecda9a81-7188-4197-aa77-124ec998b6ac"
       },
       "execution_count": 6,
       "outputs": [
@@ -108,27 +108,30 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "num = 1234\n",
+        "digits = 34567\n",
         "\n",
-        "while num != 0 :\n",
-        "    digit = num % 10\n",
-        "    num = num // 10\n",
-        "    print(digit, end=\"\")\n"
+        "def reverse_number(num) :\n",
+        "    while num != 0 :\n",
+        "        digit = num % 10\n",
+        "        num = num // 10\n",
+        "        print(digit, end=\"\")\n",
+        "\n",
+        "reverse_number(digits)"
       ],
       "metadata": {
         "id": "nsHHCmKB_pnQ",
-        "outputId": "f7a593dd-9762-4a4d-a006-5c4608f80221",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b301110d-f2ab-4ef8-9fe7-b4ee49acb8e3"
       },
-      "execution_count": 10,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4321"
+            "76543"
           ]
         }
       ]
