--- a/9강_실습(원본).ipynb
+++ b/9강_실습(원본).ipynb
@@ -156,12 +156,35 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def rtn_cone_vol(r,h) :\n",
+        "    if r > 0 and h > 0 :\n",
+        "        # r, h 모두 양수일 때\n",
+        "        vol = 1/3 * 3.14 * r ** 2 * h\n",
+        "        return vol\n",
+        "    else :\n",
+        "    # r, h가 음수일 때\n",
+        "        print(\"반지름과 높이 값에 양수를 입력하세요\")\n",
+        "\n",
+        "print(format(rtn_cone_vol(10,20),\">10.3f\"), \"입니다.\")"
+      ],
       "metadata": {
-        "id": "X8lfqqRBAQfV"
+        "id": "X8lfqqRBAQfV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c2f1ac26-878b-44e5-f653-41fe7bddf9e2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  2093.333 입니다.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
