--- a/9강_실습(원본).ipynb
+++ b/9강_실습(원본).ipynb
@@ -197,12 +197,39 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def rtn_cone_vol_surf(r,h) :\n",
+        "    if r > 0 and h > 0 :\n",
+        "        # r, h 모두 양수일 때\n",
+        "        vol = 1/3 * 3.14 * r ** 2 * h\n",
+        "        surf = 3.14 * r ** 2 + 3.14 * r * h\n",
+        "        return vol, surf\n",
+        "    else :\n",
+        "    # r, h가 음수일 때\n",
+        "        print(\"반지름과 높이 값에 양수를 입력하세요\")\n",
+        "\n",
+        "vol1, surf1 = rtn_cone_vol_surf(50,100)\n",
+        "print(vol1, \"입니다.\")\n",
+        "print(surf1, \"입니다.\")"
+      ],
       "metadata": {
-        "id": "cwZ6g1au45RD"
+        "id": "cwZ6g1au45RD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f0ffec2e-572e-44df-9d67-df0232493767"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "261666.66666666666 입니다.\n",
+            "23550.0 입니다.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -217,10 +244,21 @@
       "cell_type": "code",
       "source": [
         "a = int(input(\"첫번째 숫자를 입력하세요: \"))\n",
-        "b = int(input(\"첫번째 숫자를 입력하세요: \"))\n",
-        "c = int(input(\"첫번째 숫자를 입력하세요: \"))\n",
+        "b = int(input(\"두번째 숫자를 입력하세요: \"))\n",
+        "c = int(input(\"세번째 숫자를 입력하세요: \"))\n",
         "\n",
-        "def sort3(a, b, c) :"
+        "def sort3(a, b, c) :\n",
+        "    if a > b :\n",
+        "        a, b = b, a\n",
+        "    if a > c :\n",
+        "        a, c = c, a\n",
+        "    if b > c :\n",
+        "        b, c = c, b\n",
+        "\n",
+        "    print(a, b, c)\n",
+        "\n",
+        "sort3(a, b, c)\n",
+        "print(\"출력이후\", a, b, c)"
       ],
       "metadata": {
         "id": "toh-zjeLArWn"
