--- a/9강_실습(원본).ipynb
+++ b/9강_실습(원본).ipynb
@@ -261,10 +261,26 @@
         "print(\"출력이후\", a, b, c)"
       ],
       "metadata": {
-        "id": "toh-zjeLArWn"
+        "id": "toh-zjeLArWn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "899fb0a3-9002-488a-9e9f-fadbb86faa61"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "첫번째 숫자를 입력하세요: 34\n",
+            "두번째 숫자를 입력하세요: 12\n",
+            "세번째 숫자를 입력하세요: 100\n",
+            "12 34 100\n",
+            "출력이후 34 12 100\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -286,12 +302,40 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def rtn_cone_vol(r,h) :\n",
+        "    if r > 0 and h > 0 :\n",
+        "        # r, h 모두 양수일 때\n",
+        "        vol = 1/3 * 3.14 * r ** 2 * h\n",
+        "        r, h = 0, 0\n",
+        "        return vol\n",
+        "    else :\n",
+        "    # r, h가 음수일 때\n",
+        "        print(\"반지름과 높이 값에 양수를 입력하세요\")\n",
+        "\n",
+        "r = 50\n",
+        "h = 100\n",
+        "print(format(rtn_cone_vol(r, h), \">10.3f\"))\n",
+        "print(\"함수사용후\", r, h)"
+      ],
       "metadata": {
-        "id": "cwoR_CQp45ti"
+        "id": "cwoR_CQp45ti",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0ffe1c5d-e0ca-4109-f49a-2316ed81cc9f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "261666.667\n",
+            "함수사용후 50 100\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -304,12 +348,36 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "x = 1\n",
+        "print(\"1. x의 값은\", x)\n",
+        "\n",
+        "def inc(x) :\n",
+        "    x = x + 1\n",
+        "    print(\"2. x의 값은\", x)\n",
+        "\n",
+        "inc(x)\n",
+        "print(\"3. x의 값은\", x)"
+      ],
       "metadata": {
-        "id": "6ZuNFN9BBWKR"
+        "id": "6ZuNFN9BBWKR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a232995c-8f58-4422-e0ef-410bb4cf2b0d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1. x의 값은 1\n",
+            "2. x의 값은 2\n",
+            "3. x의 값은 1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -324,21 +392,33 @@
       "cell_type": "code",
       "source": [
         "# 원뿔 계산 함수 정의\n",
-        "def prt_cone_vol_surf(r, h) :\n",
+        "def rtn_cone_vol_surf(r = 20, h = 30) :\n",
         "    if r > 0 and h > 0 :\n",
         "        # r, h 모두 양수일 때\n",
-        "        vol = 1/3 * 3.14 * r ** 2 * h\n",
-        "        suf = 3.14 * r ** 2 + 3.14 * r * h\n",
-        "        return vol, surf\n",
+        "        return 1/3 * 3.14 * r ** 2 * h, 3.14 * r ** 2 + 3.14 * r * h\n",
         "    else :\n",
         "        # r, h가 음수일 때\n",
-        "        print(\"반지름과 높이 값에 양수를 입력하세요\")\n"
+        "        print(\"반지름과 높이 값에 양수를 입력하세요\")\n",
+        "\n",
+        "print(rtn_cone_vol_surf())"
       ],
       "metadata": {
-        "id": "mzWTObQdBXHc"
+        "id": "mzWTObQdBXHc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ddaa8981-7f5c-44f8-d03f-9438107bbc61"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(12559.999999999998, 3140.0)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -351,9 +431,115 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "def var_sum_avg(*numbers) :\n",
+        "    sum = 0\n",
+        "    count = 0\n",
+        "\n",
+        "    for i in numbers :\n",
+        "        sum = sum + i\n",
+        "        count = count + 1\n",
+        "\n",
+        "    return sum, sum/count\n",
+        "\n",
+        "print(var_sum_avg(20, 25, 10, 85, 100, 150))"
+      ],
+      "metadata": {
+        "id": "GDZkR-SKCVth",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "03eccd5a-2f20-4a7a-bd88-7426c8602c42"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "390\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**반환값 없는 함수 (print만 쓰는 경우)**"
+      ],
+      "metadata": {
+        "id": "rgp-_cbmV-ZC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def say_hello():\n",
+        "    print(\"안녕!\") #그냥 화면에 인사 출력\n",
+        "\n",
+        "result = say_hello()\n",
+        "print(\"result:\", result)"
+      ],
+      "metadata": {
+        "id": "yae_X09ZT5Yt",
+        "outputId": "c8cac65a-eca6-4e54-dfdb-3f62fa0b2a3b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "안녕!\n",
+            "result: None\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**반환값 있는 함수 (return 사용)**"
+      ],
+      "metadata": {
+        "id": "sXQL02KrWSdB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_hello():\n",
+        "    return \"안녕!\" #값을 되돌려줌\n",
+        "\n",
+        "result = get_hello()\n",
+        "print(\"result:\", result)"
+      ],
+      "metadata": {
+        "id": "P2Q-p7UlWL-h",
+        "outputId": "e9bf2157-bacb-45e0-a7cb-00b28ffd52db",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "result: 안녕!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "GDZkR-SKCVth"
+        "id": "ozbXpFufWfpS"
       },
       "execution_count": null,
       "outputs": []
