Colab을 통해 생성됨

--- a/10강_실습(원본).ipynb
+++ b/10강_실습(원본).ipynb
@@ -89,18 +89,32 @@
     {
       "cell_type": "code",
       "source": [
-        "class BMI :\n",
-        "    def __init__(self, name, age, weight, height) :\n",
+        "class BMI : #클래스 이름\n",
+        "    def __init__(self, name, age, weight, height) : #데이터 필드와 타입\n",
+        "        self.name = name  # ✅ 객체에 저장!\n",
+        "        self.age = age\n",
+        "        self.weight = weight\n",
+        "        self.height = height\n",
         "\n",
-        "    def get_BMI() :\n",
+        "    def get_BMI(self) : #메소드\n",
+        "        return self.weight / (self.height/100)**2\n",
         "\n",
-        "    def get_status() :\n",
-        ""
+        "    def get_status(self) : #메소드\n",
+        "        BMI = self.get_BMI()\n",
+        "\n",
+        "        if BMI() >= 25 :\n",
+        "            return \"비만\"\n",
+        "        elif BMI() >= 23 and BMI < 25 :\n",
+        "            return \"과체중\"\n",
+        "        elif BMI() >= 18.5 and BMI < 23 :\n",
+        "            return \"정상\"\n",
+        "        else :\n",
+        "            return \"저체중\""
       ],
       "metadata": {
         "id": "kGjkpruVvTS5"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
