Colab을 통해 생성됨

--- a/10강_실습(원본).ipynb
+++ b/10강_실습(원본).ipynb
@@ -97,16 +97,15 @@
         "        self.height = height\n",
         "\n",
         "    def get_BMI(self) : #메소드\n",
-        "        return self.weight / (self.height/100)**2\n",
+        "        BMI = self.weight / (self.height/100)**2\n",
         "\n",
         "    def get_status(self) : #메소드\n",
-        "        BMI = self.get_BMI()\n",
         "\n",
-        "        if BMI() >= 25 :\n",
+        "        if self.get_status() >= 25 :\n",
         "            return \"비만\"\n",
-        "        elif BMI() >= 23 and BMI < 25 :\n",
+        "        elif self.get_status() >= 23 and self.get_status < 25 :\n",
         "            return \"과체중\"\n",
-        "        elif BMI() >= 18.5 and BMI < 23 :\n",
+        "        elif self.get_status() >= 18.5 and self.get_status < 23 :\n",
         "            return \"정상\"\n",
         "        else :\n",
         "            return \"저체중\""
@@ -114,7 +113,7 @@
       "metadata": {
         "id": "kGjkpruVvTS5"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -137,12 +136,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "unit_cone = Cone() #별도로 정의해주지 않으면, 위에서 정의한 기본값이 적용\n",
+        "big_cone = Cone(50, 100)\n",
+        "\n",
+        "print(\"단위 원뿔의 겉넓이와 부피는\", unit_cone.get_vol(), unit_cone.get_surt(), \"입니다.\")\n",
+        "print(\"큰 원뿔의 겉넓이와 부피는\", big_cone.get_surt(), big_cone.get_vol(), \"입니다.\")"
+      ],
       "metadata": {
-        "id": "zQVNoXVKyB3M"
+        "id": "zQVNoXVKyB3M",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "11b54022-f812-4df3-8857-c29e3706c262"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "단위 원뿔의 겉넓이와 부피는 12559.999999999998 3140.0 입니다.\n",
+            "큰 원뿔의 겉넓이와 부피는 23550.0 261666.66666666666 입니다.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -155,12 +173,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "person1 = BMI(\"홍길동\", 40, 78, 182)\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "tiZVGBTmyPFV"
+        "id": "tiZVGBTmyPFV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "86059d3b-a6a0-4bf8-d679-b38059f63098"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "ERROR:root:Internal Python error in the inspect module.\n",
+            "Below is the traceback from this internal error.\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
