Colab을 통해 생성됨

--- a/10강_실습(원본).ipynb
+++ b/10강_실습(원본).ipynb
@@ -54,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "FTNaN-iHlnNO"
       },
@@ -98,14 +98,16 @@
         "\n",
         "    def get_BMI(self) : #메소드\n",
         "        BMI = self.weight / (self.height/100)**2\n",
+        "        return BMI\n",
         "\n",
         "    def get_status(self) : #메소드\n",
+        "        bmi = self.get_BMI()\n",
         "\n",
-        "        if self.get_status() >= 25 :\n",
+        "        if bmi >= 25 :\n",
         "            return \"비만\"\n",
-        "        elif self.get_status() >= 23 and self.get_status < 25 :\n",
+        "        elif bmi >= 23 and bmi < 25 :\n",
         "            return \"과체중\"\n",
-        "        elif self.get_status() >= 18.5 and self.get_status < 23 :\n",
+        "        elif bmi >= 18.5 and bmi < 23 :\n",
         "            return \"정상\"\n",
         "        else :\n",
         "            return \"저체중\""
@@ -113,7 +115,7 @@
       "metadata": {
         "id": "kGjkpruVvTS5"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -150,7 +152,7 @@
         },
         "outputId": "11b54022-f812-4df3-8857-c29e3706c262"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -175,24 +177,23 @@
       "cell_type": "code",
       "source": [
         "person1 = BMI(\"홍길동\", 40, 78, 182)\n",
-        "\n"
+        "\n",
+        "print(person1.name + \"님(\" + str(person1.age) + \"세)의 BMI 수치는\", person1.get_BMI(), \"결과는\", person1.get_status(), \"입니다.\")"
       ],
       "metadata": {
         "id": "tiZVGBTmyPFV",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "86059d3b-a6a0-4bf8-d679-b38059f63098"
+        "outputId": "d587342f-0830-42a1-c58e-1ff952a6b0af"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stderr",
+          "name": "stdout",
           "text": [
-            "ERROR:root:Internal Python error in the inspect module.\n",
-            "Below is the traceback from this internal error.\n",
-            "\n"
+            "홍길동님(40세)의 BMI 수치는 23.54788069073783 결과는 과체중 입니다.\n"
           ]
         }
       ]
