--- a/10강_실습(원본).ipynb
+++ b/10강_실습(원본).ipynb
@@ -54,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "FTNaN-iHlnNO"
       },
@@ -115,7 +115,7 @@
       "metadata": {
         "id": "kGjkpruVvTS5"
       },
-      "execution_count": 4,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -176,7 +176,7 @@
     {
       "cell_type": "code",
       "source": [
-        "person1 = BMI(\"홍길동\", 40, 78, 182)\n",
+        "person1 = BMI(\"홍길동\", 40, 78, 182) # ← 이게 바로 인스턴스!\n",
         "\n",
         "print(person1.name + \"님(\" + str(person1.age) + \"세)의 BMI 수치는\", person1.get_BMI(), \"결과는\", person1.get_status(), \"입니다.\")"
       ],
@@ -218,11 +218,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#잘못된 값으로 객체가 만들어지는 것을 막기 위한 접근자와 변경자\n",
+        "class pCone :\n",
+        "    def __init__(self, radius = 20, height = 30):\n",
+        "        if radius > 0 and height > 0 : #초기자에 의해 > 0 일 때만 접근 가능하도록 설정\n",
+        "            self.__r = radius # __ 를 앞에 붙여서 private 한 데이터 필드 지정 (객체 외부에서는 접근이 불가능한 반지름과 높이값)\n",
+        "            self.__h = height\n",
+        "\n",
+        "    def get_vol(self) :\n",
+        "        return 1/3 * 3.14 * self.__r ** 2 * self.__h\n",
+        "\n",
+        "    def get_surt(self) :\n",
+        "        return 3.14 * self.__r ** 2 + 3.14 * self.__r * self.__h\n",
+        "\n",
+        "    def get_radius(self) :\n",
+        "        return self.__r\n",
+        "\n",
+        "    def set_radius(self, radius) :\n",
+        "        if radius > 0 :\n",
+        "         self.__r = radius"
+      ],
       "metadata": {
         "id": "86XSydVIynoU"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -236,11 +256,39 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class pBMI :\n",
+        "    def __init__(self, name, age, weight, height) :\n",
+        "        if age > 0 and weight > 0 and height > 0 :\n",
+        "            self.__name = name\n",
+        "            self.__age = age\n",
+        "            self.__weight = weight\n",
+        "            self.__height = height\n",
+        "\n",
+        "    def get_BMI(self) : #메소드\n",
+        "        BMI = self.weight / (self.height/100)**2\n",
+        "        return BMI\n",
+        "\n",
+        "    def get_status(self) : #메소드\n",
+        "        bmi = self.get_BMI()\n",
+        "\n",
+        "        if bmi >= 25 :\n",
+        "            return \"비만\"\n",
+        "        elif bmi >= 23 and bmi < 25 :\n",
+        "            return \"과체중\"\n",
+        "        elif bmi >= 18.5 and bmi < 23 :\n",
+        "            return \"정상\"\n",
+        "        else :\n",
+        "            return \"저체중\"\n",
+        "\n",
+        "    def set_BMI(self, BMI) :\n",
+        "        if weight > 0 and height > 0 :\n",
+        "            self.__bmi = bmi"
+      ],
       "metadata": {
-        "id": "xz4rXoCBzAJD"
+        "id": "41aVK96flAsG"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     }
   ]
