Colab을 통해 생성됨

--- a/10강_실습(원본).ipynb
+++ b/10강_실습(원본).ipynb
@@ -97,8 +97,8 @@
         "        self.height = height\n",
         "\n",
         "    def get_BMI(self) : #메소드\n",
-        "        BMI = self.weight / (self.height/100)**2\n",
-        "        return BMI\n",
+        "        bmi = self.weight / (self.height/100)**2\n",
+        "        return bmi\n",
         "\n",
         "    def get_status(self) : #메소드\n",
         "        bmi = self.get_BMI()\n",
@@ -115,7 +115,7 @@
       "metadata": {
         "id": "kGjkpruVvTS5"
       },
-      "execution_count": 23,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -185,9 +185,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d587342f-0830-42a1-c58e-1ff952a6b0af"
+        "outputId": "ac47a605-23fc-481c-8682-aadd1ee65883"
       },
-      "execution_count": 5,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -260,17 +260,19 @@
         "class pBMI :\n",
         "    def __init__(self, name, age, weight, height) :\n",
         "        if age > 0 and weight > 0 and height > 0 :\n",
-        "            self.__name = name\n",
+        "            self.__name = name #  private 멤버 변수로 설정\n",
         "            self.__age = age\n",
         "            self.__weight = weight\n",
         "            self.__height = height\n",
         "\n",
-        "    def get_BMI(self) : #메소드\n",
-        "        BMI = self.weight / (self.height/100)**2\n",
-        "        return BMI\n",
+        "       # 접근자 (Getter) - BMI 계산\n",
+        "    def get_BMI(self) :\n",
+        "        bmi = self.__weight / (self.__height/100)**2\n",
+        "        return bmi\n",
         "\n",
-        "    def get_status(self) : #메소드\n",
-        "        bmi = self.get_BMI()\n",
+        "        # 접근자 (Getter) - 상태 반환\n",
+        "    def get_status(self) :\n",
+        "        bmi = self.__get_BMI()\n",
         "\n",
         "        if bmi >= 25 :\n",
         "            return \"비만\"\n",
@@ -279,16 +281,12 @@
         "        elif bmi >= 18.5 and bmi < 23 :\n",
         "            return \"정상\"\n",
         "        else :\n",
-        "            return \"저체중\"\n",
-        "\n",
-        "    def set_BMI(self, BMI) :\n",
-        "        if weight > 0 and height > 0 :\n",
-        "            self.__bmi = bmi"
+        "            return \"저체중\"\n"
       ],
       "metadata": {
         "id": "41aVK96flAsG"
       },
-      "execution_count": 24,
+      "execution_count": 25,
       "outputs": []
     }
   ]
