--- a/11강_실습(원본).ipynb
+++ b/11강_실습(원본).ipynb
@@ -57,10 +57,10 @@
       "execution_count": 4,
       "metadata": {
         "id": "QjtNEdkcynR7",
-        "outputId": "e34414a2-1feb-493c-d8ef-c6a5814c205f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e34414a2-1feb-493c-d8ef-c6a5814c205f"
       },
       "outputs": [
         {
@@ -111,10 +111,10 @@
       ],
       "metadata": {
         "id": "ZJwXQoQIM7uw",
-        "outputId": "51c06241-4264-4a95-f038-a853b763ca83",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "51c06241-4264-4a95-f038-a853b763ca83"
       },
       "execution_count": 7,
       "outputs": [
@@ -147,12 +147,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import math\n",
+        "from math import sin\n",
+        "\n",
+        "a, b = 10, 20\n",
+        "\n",
+        "area = 1 / 2 * a * b * math.sin(math.radians(60))\n",
+        "\n",
+        "print(area)"
+      ],
       "metadata": {
-        "id": "CK6KXvIv3IZV"
+        "id": "CK6KXvIv3IZV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2217d4a7-7177-4bb8-b386-7413abc6e176"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "86.60254037844386\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -166,17 +187,53 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import random\n",
+        "\n",
+        "guess_str = input(\"1~45 번호 6개를 쉼표로 분리하여 입력하세요: \").split(\", \")\n",
+        "guess_list = list()\n",
+        "\n",
+        "for i in guess_str:\n",
+        "    guess_list.append(int(i))\n",
+        "\n",
+        "lotto_list = random.sample(range(1, 46, 1), 6)\n",
+        "\n",
+        "print(\"예상 번호는\", guess_list, \"입니다.\")\n",
+        "print(\"추첨 번호는\", lotto_list, \"입니다.\")\n",
+        "\n",
+        "hit_count = 0;\n",
+        "\n",
+        "for i in guess_list:\n",
+        "    if i in lotto_list:\n",
+        "        hit_count = hit_count + 1\n",
+        "\n",
+        "print(\"축하합니다\" + str(hit_count) + \"개 맞혔습니다.\")"
+      ],
       "metadata": {
-        "id": "Btr-jR2m3KZA"
+        "id": "Btr-jR2m3KZA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1d01c538-2452-4b4c-e1bc-69466ce89d90"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1~45 번호 6개를 쉼표로 분리하여 입력하세요: 1, 3, 10, 11, 4, 2\n",
+            "예상 번호는 [1, 3, 10, 11, 4, 2] 입니다.\n",
+            "추첨 번호는 [36, 14, 4, 28, 22, 17] 입니다.\n",
+            "축하합니다1개 맞혔습니다.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "20번의 기회 안에 1 ~ 100 사이의 숫자를\n",
+        "20번의 기회 안에 1 ~ 1000 사이의 숫자를\n",
         "맞히는 스무고개 프로그램을 작성하시오.\n"
       ],
       "metadata": {
@@ -185,12 +242,49 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import random\n",
+        "\n",
+        "hit_number = random.randint(1, 1001)\n",
+        "\n",
+        "guess_count_list = range(1, 21, 1)\n",
+        "\n",
+        "for guess_count in guess_count_list:\n",
+        "\n",
+        "    guess = int(input(\"숫자를 맞춰보세요(\" + str(guess_count)+\"번째 시도):\"))\n",
+        "\n",
+        "    if hit_number == guess:\n",
+        "        passfail = True\n",
+        "    elif hit_number > guess:\n",
+        "        print(str(\"guess\") + \"보다 큽니다.\", end =\"\")\n",
+        "    else:\n",
+        "        hit_number < guess\n",
+        "        print(str(\"guess\") + \"보다 작습니다\", end=\"\")\n",
+        "\n",
+        "if passfail == True:\n",
+        "    print(\"맞췄습니다. 축하합니다.\")\n",
+        "else:\n",
+        "    print(\"모든 기회를 다 사용하셨습니다. 다음에 다시 도전하세요\")"
+      ],
       "metadata": {
-        "id": "XhmZvkWVSA9Z"
+        "id": "XhmZvkWVSA9Z",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 110
+        },
+        "outputId": "7124b32c-878a-46ca-89b7-01b1676cd211"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (<ipython-input-14-3f08d2f49a57>, line 16)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-3f08d2f49a57>\"\u001b[0;36m, line \u001b[0;32m16\u001b[0m\n\u001b[0;31m    hit_number < guess:\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
