--- a/11강_실습(원본).ipynb
+++ b/11강_실습(원본).ipynb
@@ -255,6 +255,7 @@
         "\n",
         "    if hit_number == guess:\n",
         "        passfail = True\n",
+        "        break;\n",
         "    elif hit_number > guess:\n",
         "        print(str(\"guess\") + \"보다 큽니다.\", end =\"\")\n",
         "    else:\n",
@@ -262,26 +263,37 @@
         "        print(str(\"guess\") + \"보다 작습니다\", end=\"\")\n",
         "\n",
         "if passfail == True:\n",
-        "    print(\"맞췄습니다. 축하합니다.\")\n",
+        "    print(\"맞혔습니다. 축하합니다.\")\n",
         "else:\n",
         "    print(\"모든 기회를 다 사용하셨습니다. 다음에 다시 도전하세요\")"
       ],
       "metadata": {
         "id": "XhmZvkWVSA9Z",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 110
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7124b32c-878a-46ca-89b7-01b1676cd211"
+        "outputId": "0cb09d36-f2b5-4cb8-f038-ab86d9a38ff1"
       },
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-14-3f08d2f49a57>, line 16)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-3f08d2f49a57>\"\u001b[0;36m, line \u001b[0;32m16\u001b[0m\n\u001b[0;31m    hit_number < guess:\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "숫자를 맞춰보세요(1번째 시도):500\n",
+            "guess보다 작습니다숫자를 맞춰보세요(2번째 시도):100\n",
+            "guess보다 큽니다.숫자를 맞춰보세요(3번째 시도):160\n",
+            "guess보다 큽니다.숫자를 맞춰보세요(4번째 시도):350\n",
+            "guess보다 작습니다숫자를 맞춰보세요(5번째 시도):200\n",
+            "guess보다 큽니다.숫자를 맞춰보세요(6번째 시도):250\n",
+            "guess보다 작습니다숫자를 맞춰보세요(7번째 시도):230\n",
+            "guess보다 큽니다.숫자를 맞춰보세요(8번째 시도):235\n",
+            "guess보다 큽니다.숫자를 맞춰보세요(9번째 시도):240\n",
+            "guess보다 큽니다.숫자를 맞춰보세요(10번째 시도):246\n",
+            "guess보다 큽니다.숫자를 맞춰보세요(11번째 시도):248\n",
+            "guess보다 큽니다.숫자를 맞춰보세요(12번째 시도):2494\n",
+            "guess보다 작습니다숫자를 맞춰보세요(13번째 시도):249\n",
+            "맞췄습니다. 축하합니다.\n"
           ]
         }
       ]
