Colab을 통해 생성됨

--- a/11강_실습(원본).ipynb
+++ b/11강_실습(원본).ipynb
@@ -250,8 +250,7 @@
         "guess_count_list = range(1, 21, 1)\n",
         "\n",
         "for guess_count in guess_count_list:\n",
-        "\n",
-        "    guess = int(input(\"숫자를 맞춰보세요(\" + str(guess_count)+\"번째 시도):\"))\n",
+        "    guess = int(input(\"숫자를 맞혀보세요(\" + str(guess_count)+\"번째 시도):\"))\n",
         "\n",
         "    if hit_number == guess:\n",
         "        passfail = True\n",
@@ -272,28 +271,26 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0cb09d36-f2b5-4cb8-f038-ab86d9a38ff1"
+        "outputId": "6a37580e-18d9-4e16-ae61-417e0cec700c"
       },
-      "execution_count": 15,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "숫자를 맞춰보세요(1번째 시도):500\n",
-            "guess보다 작습니다숫자를 맞춰보세요(2번째 시도):100\n",
-            "guess보다 큽니다.숫자를 맞춰보세요(3번째 시도):160\n",
-            "guess보다 큽니다.숫자를 맞춰보세요(4번째 시도):350\n",
-            "guess보다 작습니다숫자를 맞춰보세요(5번째 시도):200\n",
-            "guess보다 큽니다.숫자를 맞춰보세요(6번째 시도):250\n",
-            "guess보다 작습니다숫자를 맞춰보세요(7번째 시도):230\n",
-            "guess보다 큽니다.숫자를 맞춰보세요(8번째 시도):235\n",
-            "guess보다 큽니다.숫자를 맞춰보세요(9번째 시도):240\n",
-            "guess보다 큽니다.숫자를 맞춰보세요(10번째 시도):246\n",
-            "guess보다 큽니다.숫자를 맞춰보세요(11번째 시도):248\n",
-            "guess보다 큽니다.숫자를 맞춰보세요(12번째 시도):2494\n",
-            "guess보다 작습니다숫자를 맞춰보세요(13번째 시도):249\n",
-            "맞췄습니다. 축하합니다.\n"
+            "숫자를 맞혀보세요(1번째 시도):501\n",
+            "guess보다 작습니다숫자를 맞혀보세요(2번째 시도):300\n",
+            "guess보다 큽니다.숫자를 맞혀보세요(3번째 시도):450\n",
+            "guess보다 작습니다숫자를 맞혀보세요(4번째 시도):400\n",
+            "guess보다 작습니다숫자를 맞혀보세요(5번째 시도):380\n",
+            "guess보다 작습니다숫자를 맞혀보세요(6번째 시도):340\n",
+            "guess보다 큽니다.숫자를 맞혀보세요(7번째 시도):356\n",
+            "guess보다 큽니다.숫자를 맞혀보세요(8번째 시도):360\n",
+            "guess보다 큽니다.숫자를 맞혀보세요(9번째 시도):368\n",
+            "guess보다 큽니다.숫자를 맞혀보세요(10번째 시도):370\n",
+            "guess보다 큽니다.숫자를 맞혀보세요(11번째 시도):375\n",
+            "맞혔습니다. 축하합니다.\n"
           ]
         }
       ]
