Colab을 통해 생성됨

--- a/11강_실습(원본).ipynb
+++ b/11강_실습(원본).ipynb
@@ -54,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "QjtNEdkcynR7",
         "colab": {
@@ -116,7 +116,7 @@
         },
         "outputId": "51c06241-4264-4a95-f038-a853b763ca83"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +164,7 @@
         },
         "outputId": "2217d4a7-7177-4bb8-b386-7413abc6e176"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -216,7 +216,7 @@
         },
         "outputId": "1d01c538-2452-4b4c-e1bc-69466ce89d90"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -243,55 +243,50 @@
     {
       "cell_type": "code",
       "source": [
-        "import random\n",
+        "import random  # 랜덤 숫자를 생성하기 위한 random 모듈 임포트\n",
         "\n",
-        "hit_number = random.randint(1, 1001)\n",
+        "hit_number = random.randint(1, 1001)  # 1부터 1000 사이의 무작위 숫자를 정답으로 설정 (1001은 포함되지 않음)\n",
         "\n",
-        "guess_count_list = range(1, 21, 1)\n",
+        "guess_count_list = range(1, 21, 1)  # 1부터 20까지의 숫자 리스트를 생성 (총 20번 시도 가능)\n",
         "\n",
-        "for guess_count in guess_count_list:\n",
-        "    guess = int(input(\"숫자를 맞혀보세요(\" + str(guess_count)+\"번째 시도):\"))\n",
+        "for guess_count in guess_count_list:  # 각 시도에 대해 반복\n",
+        "    guess = int(input(\"숫자를 맞혀보세요(\" + str(guess_count) + \"번째 시도):\"))  # 사용자로부터 숫자 입력 받기\n",
         "\n",
-        "    if hit_number == guess:\n",
-        "        passfail = True\n",
-        "        break;\n",
-        "    elif hit_number > guess:\n",
-        "        print(str(\"guess\") + \"보다 큽니다.\", end =\"\")\n",
-        "    else:\n",
-        "        hit_number < guess\n",
-        "        print(str(\"guess\") + \"보다 작습니다\", end=\"\")\n",
+        "    if hit_number == guess:  # 사용자의 입력이 정답과 일치하는 경우\n",
+        "        passfail = True  # 정답을 맞췄음을 표시\n",
+        "        break  # 반복 종료\n",
+        "    elif hit_number > guess:  # 정답이 사용자의 추측보다 클 경우\n",
+        "        print(str(\"guess\") + \"보다 큽니다.\", end=\"\")  # 힌트 출력 (여기서 \"guess\"는 문자열로 출력됨. 실제 입력값이 아님)\n",
+        "    else:  # 정답이 사용자의 추측보다 작을 경우\n",
+        "        hit_number < guess  # 이 줄은 필요 없는 비교 (결과를 사용하지 않음)\n",
+        "        print(str(\"guess\") + \"보다 작습니다\", end=\"\")  # 힌트 출력 (여기서도 \"guess\"는 실제 값이 아님)\n",
         "\n",
-        "if passfail == True:\n",
-        "    print(\"맞혔습니다. 축하합니다.\")\n",
-        "else:\n",
-        "    print(\"모든 기회를 다 사용하셨습니다. 다음에 다시 도전하세요\")"
+        "if passfail == True:  # 정답을 맞춘 경우\n",
+        "    print(\"맞혔습니다. 축하합니다.\")  # 축하 메시지 출력\n",
+        "else:  # 20번 모두 실패한 경우\n",
+        "    print(\"모든 기회를 다 사용하셨습니다. 다음에 다시 도전하세요\")  # 실패 메시지 출력\n"
       ],
       "metadata": {
         "id": "XhmZvkWVSA9Z",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 391
         },
-        "collapsed": true,
-        "outputId": "6a37580e-18d9-4e16-ae61-417e0cec700c"
+        "outputId": "d7652a9b-2e21-4010-b8e1-5a0a2f9d4a34"
       },
-      "execution_count": 18,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "숫자를 맞혀보세요(1번째 시도):501\n",
-            "guess보다 작습니다숫자를 맞혀보세요(2번째 시도):300\n",
-            "guess보다 큽니다.숫자를 맞혀보세요(3번째 시도):450\n",
-            "guess보다 작습니다숫자를 맞혀보세요(4번째 시도):400\n",
-            "guess보다 작습니다숫자를 맞혀보세요(5번째 시도):380\n",
-            "guess보다 작습니다숫자를 맞혀보세요(6번째 시도):340\n",
-            "guess보다 큽니다.숫자를 맞혀보세요(7번째 시도):356\n",
-            "guess보다 큽니다.숫자를 맞혀보세요(8번째 시도):360\n",
-            "guess보다 큽니다.숫자를 맞혀보세요(9번째 시도):368\n",
-            "guess보다 큽니다.숫자를 맞혀보세요(10번째 시도):370\n",
-            "guess보다 큽니다.숫자를 맞혀보세요(11번째 시도):375\n",
-            "맞혔습니다. 축하합니다.\n"
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "Interrupted by user",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-b8e7771f3203>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mguess_count\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mguess_count_list\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# 각 시도에 대해 반복\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mguess\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"숫자를 맞혀보세요(\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mguess_count\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"번째 시도):\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# 사용자로부터 숫자 입력 받기\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mhit_number\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mguess\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# 사용자의 입력이 정답과 일치하는 경우\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1175\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1176\u001b[0m             )\n\u001b[0;32m-> 1177\u001b[0;31m         return self._input_request(\n\u001b[0m\u001b[1;32m   1178\u001b[0m             \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1179\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"shell\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1217\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1218\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1219\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1220\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1221\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
           ]
         }
       ]
@@ -336,7 +331,7 @@
         },
         "outputId": "99fb0b72-fdbe-447e-f4f4-8a9c31fe84dd"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
